--- a/CakesMVC.Data/CakesMVC.Data.csproj
+++ b/CakesMVC.Data/CakesMVC.Data.csproj
@@ -42,6 +42,12 @@
     <Reference Include="Microsoft.AspNet.Identity.EntityFramework">
       <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
     </Reference>
+    <Reference Include="SendGrid.SmtpApi">
+      <HintPath>..\packages\SendGrid.SmtpApi.1.3.1\lib\net40\SendGrid.SmtpApi.dll</HintPath>
+    </Reference>
+    <Reference Include="SendGridMail">
+      <HintPath>..\packages\Sendgrid.6.1.0\lib\SendGridMail.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -56,6 +62,14 @@
     <Compile Include="Migrations\201504260509162_First.cs" />
     <Compile Include="Migrations\201504260509162_First.Designer.cs">
       <DependentUpon>201504260509162_First.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505031911362_Added_Photo.cs" />
+    <Compile Include="Migrations\201505031911362_Added_Photo.Designer.cs">
+      <DependentUpon>201505031911362_Added_Photo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505032057184_Edited_Photo.cs" />
+    <Compile Include="Migrations\201505032057184_Edited_Photo.Designer.cs">
+      <DependentUpon>201505032057184_Edited_Photo.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,6 +88,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201504260509162_First.resx">
       <DependentUpon>201504260509162_First.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505031911362_Added_Photo.resx">
+      <DependentUpon>201505031911362_Added_Photo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505032057184_Edited_Photo.resx">
+      <DependentUpon>201505032057184_Edited_Photo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
