--- a/CakesMVC/CakesMVC.csproj
+++ b/CakesMVC/CakesMVC.csproj
@@ -48,6 +48,12 @@
       <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SendGrid.SmtpApi">
+      <HintPath>..\packages\SendGrid.SmtpApi.1.3.1\lib\net40\SendGrid.SmtpApi.dll</HintPath>
+    </Reference>
+    <Reference Include="SendGridMail">
+      <HintPath>..\packages\Sendgrid.6.1.0\lib\SendGridMail.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -57,7 +63,6 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -156,6 +161,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\Adapters\AlbumAdapter.cs" />
+    <Compile Include="Adapters\Adapters\CakeAdapter.cs" />
+    <Compile Include="Adapters\Interfaces\IAlbumAdapter.cs" />
+    <Compile Include="Adapters\Interfaces\ICakeAdapter.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -186,8 +195,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <Content Include="Images\Project\dome_slider.jpg" />
     <Content Include="Images\Project\baby.jpg" />
+    <Content Include="Images\Project\dome_slider.jpg" />
     <Content Include="Images\Project\baby640.jpg" />
     <Content Include="Images\Project\babyshower.jpg" />
     <Content Include="Images\Project\babyshower134.jpg" />
@@ -207,6 +216,7 @@
     <Content Include="Images\Project\ivory134.jpg" />
     <Content Include="Images\Project\lampshade1.jpg" />
     <Content Include="Images\Project\nipa.jpg" />
+    <Content Include="Images\Project\nipa134.jpg" />
     <Content Include="Images\Project\ruffled.jpg" />
     <Content Include="Images\Project\ruffled134.jpg" />
     <Content Include="Images\Project\wine.jpg" />
